--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="p5.min.js"></script>
+    <script src="plank.js"></script>
+    <script src="p5play.js"></script>
+    <script src="JUEGO1.js"></script>
 </body>
 </html>
