--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="p5.min.js"></script>
     <script src="plank.js"></script>
     <script src="p5play.js"></script>
-    <script src="JUEGO1.js"></script>
+    <script src="JUEGO.js"></script>
 </body>
 </html>
